--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "engines": {
+  "node": "20.x"
+},
   "dependencies": {
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
